--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.2.2",
     "basiclightbox": "^5.0.4",
+    "firebase": "^9.15.0",
     "modern-normalize": "^1.1.0",
     "notiflix": "^3.2.6",
     "tui-pagination": "^3.4.1"
@@ -27,10 +28,11 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
     "buffer": "^6.0.3",
+    "lodash.throttle": "^4.1.1",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "lodash.throttle": "^4.1.1",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
